[package]
name = "advent-of-code"
version = "0.0.0"
edition = "2021"

[dependencies]
paste = "1"
criterion = "0.4"
dhat = "0.3"
ahash = "0.8"
regex = "1.7.0"

[dependencies.lexical-core]
version = "0.8"
default-features = false
features = ["parse-integers"]

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
